...
                        </Link>

                        <View className="flex-row items-center gap-4">

                            <Pressable
                                accessibilityRole="button"
                                accessibilityLabel="Toggle account menu"
                                className="rounded-full p-2"
                                onPress={() => setMobileAccountMenuOpen(!mobileAccountMenuOpen)}
                            >
                                <IonIcons
                                    name="person-outline"
                                    size={30}
...
